# cos-mcp

./: .gitignore  HERMES.md  README.md  pyproject.toml  verify_phase1.py
.hermes/: gsd-file-manifest.json  gsd-install-state.json  settings.json
.hermes/agents/: gsd-advisor-researcher.md  gsd-ai-researcher.md  gsd-debugger.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.hermes/hooks/: gsd-check-update-worker.js  gsd-check-update.js  gsd-config-reload.js  gsd-context-monitor.js  gsd-read-guard.js  gsd-read-injection-scanner.js  gsd-statusline.js
.hermes/plans/: 2026-06-19_195600-hydradb-provider-completion.md
.planning/: PROJECT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
cos_mcp/: __init__.py  base_context_engine.py  base_provider.py  circuit_breaker.py
cos_mcp/backends/: base.py  hydradb.py  (+1 more)
hydradb-memory/: README.md  SPEC.md  __init__.py  plugin.yaml
muninn-memory/: README.md  __init__.py  plugin.yaml
plugins/: __init__.py
research/: hermes-memory-provider-research.md  hydradb-context-engine.html  hydradb-provider-design.html  hydradb-provider-design.md  hydradb-v2-research.md  muninn-context-engine.html
tests/: __init__.py
(+187 files in other folders)
