[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cos-mcp"
version = "0.2.0"
description = "Shared infrastructure for Hermes Agent memory provider plugins"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
hydradb = ["hydradb-sdk>=2,<3"]
muninn = ["requests>=2.31"]

[tool.setuptools]
packages = ["cos_mcp", "cos_mcp.backends", "cos_mcp.formatting"]
